<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Find some Images</string>
    <string name="search_button">Search</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">Image Filter Settings</string>
    <string name="size">Size:</string>
    <string name="color">Color:</string>
    <string name="site">Site:</string>
    <string name="type">Type:</string>    
    <string name="filter">Filter</string>
    <string name="site_prompt">Enter Website</string>
    <string name="button_save">Save</string>
    

</resources>
